Corrección arquitectónica y creación de capa de DTOs independiente
Ajusté los dtos para que sigan el MVC. Corregí algunos bugs.
Implementé una clase de prueba para Puntaje.
Mejoré un poco la cohesion-acoplamiento pero aun falta.